fixed location box issue on firefox

--- a/src/scss/_locations.scss
+++ b/src/scss/_locations.scss
@@ -59,6 +59,7 @@
         margin: 3rem 0;
         max-width: 30rem;
         width: 100%;
+        flex: none;
     }
 
     &__icon-box {
